[package]
name = "symspell"
version = "0.6.0"
license = "MIT"
authors = ["Rene Klacan <rene.klacan@gmail.com>"]
keywords = ["spellcheck"]
description = "Spelling correction & Fuzzy search"
homepage = "https://github.com/reneklacan/symspell"
repository = "https://github.com/reneklacan/symspell"
edition = "2018"
exclude = [
    "data/*",
]

[dependencies]
strsim = "^0.10"
derive_builder = "^0.9"
hashbrown = "0.11"
ahash = "0.7"
unidecode = "^0.3"
log = "0.4"
